# safefork

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: tests.yaml
src/safefork/: __init__.py  _safefork.py
tests/: test_safefork.py
unsafe_examples/: fork_with_asyncio_loop.py  fork_with_pending_signals.py  fork_with_threads.py
